# EvysDiscordUtils

./: .clang-format  .gitignore  CMakeLists.txt  README.MD  tmp.json  vcpkg.json
src/: messageToJson.cpp  tools.hpp
